--- a/index.Rmd
+++ b/index.Rmd
@@ -1,24 +1,34 @@
-<link rel="stylesheet" href="styles.css" type="text/css">
-
-<img src="images/YZ22.jpg" style="width:30%; border:5px solid; margin-right: 20px" align="left">
-
-**Hi there! Welcome to this tiny corner of mine on the boundless internet!** 
+---
+title: "Yini Zhang"
+image: "images/zhang.png"
+links:
+  - label: Google Scholar
+    url: "https://scholar.google.com/citations?user=OQqFZoEAAAAJ&hl=en"
+  - label: Twitter
+    url: "https://twitter.com/yinizhang2011"
+  - label: Email
+    url: "mailto:yzhang20@buffalo.edu"
+output:
+  postcards::trestles
+---
+ 
+Hi there! Welcome to this tiny corner of mine on the boundless internet! 
 
 I'm an assistant professor in the [Department of Communication](http://www.buffalo.edu/cas/communication.html) at the University at Buffalo (some people prefer SUNY-Buffalo). I graduated with a Ph.D. in mass communication from the [School of Journalism & Mass Communication at the University of Wisconsin-Madison](https://journalism.wisc.edu). 
 
-I study the processes and consequences of (mostly political) communication. My research program centers around three questions: 1) within social media, how people express themselves and interact with each other, 2) as an ecosystem, how social media platforms relate to one another in terms of the flow of information, and 3) beyond social media, what can influence and be influenced by communication and interaction on social media. With these three lines of inquiry, I hope to explore the nature and dynamics of public attention, opinion expression, and information sharing on social media and their implications for journalism and democracy.
+I study the processes and outcomes of (mostly political) communication, with a particular emphasis on social media. Through my research program, I seek to answer three primary questions. First, how do individuals express themselves and interact with each other on social media? Second, how do social media platforms form an ecosystem and relate to one another in terms of information flow? And third, what are the broader implications of communication and interaction on social media for journalism and civic life? With these three lines of inquiry, I hope to explore how emerging communication technologies are shaping the nature and dynamics of public attention, opinion expression, and information sharing, and their larger societal implications.
 
-I have written academic articles about how social media actors assemble their followings, how social media amplify obscure actors and peripheral groups, and how social media public opinion can be imagined and measured. The topics of those articles range from mass shootings and gun control, immigration, the #MeToo movement, Donald Trump's social media following, QAnon, to the Russian IRA disinformation campaign. Here's a link to [my Google Scholar](https://scholar.google.com/citations?user=OQqFZoEAAAAJ&hl=en).
+I have authored academic articles on a variety of topics, such as how social media actors assemble their followers, how social media amplify obscure actors and peripheral groups, and how social media public opinion can be imagined and measured. My research has explored political issues ranging from mass shootings and gun control, immigration, the #MeToo movement, Donald Trump's social media use, QAnon, to the Russian IRA disinformation campaign. 
 
-The methods I use in my research are primarily computational, though I am also familiar with survey and experimental methods. For my research, I usually collect Twitter data via its APIs, conduct automated text analysis using unsupervised and supervised machine learning, perform community detection via various clustering techniques, and run time series modeling. Recently, I have moved beyond Twitter to foray into other platforms in my research, like Facebook, YouTube, Reddit, Truth Social, and Parler. Besides using existing computational methods, I also develop innovative methods in collaboration with colleagues from statistics and computer science to facilitate communication research. R is my primary programming language. I have a working knowledge of SPSS, Hadoop, Java, and Python.
+The methods I use in my research are primarily computational, though I am also familiar with survey and experimental methods. For my research, I usually collect social media data, conduct automated text analysis using unsupervised and supervised machine learning, perform community detection through various clustering techniques, and run time series modeling. In addition to Twitter, I have expanded my research to other platforms such as Facebook, YouTube, Reddit, Truth Social, and Parler. Besides using existing computational methods, I also develop innovative methods in collaboration with colleagues from statistics and computer science to facilitate communication research. My primary programming language is R, and I have a working knowledge of SPSS, Hadoop, Java, and Python.
 
-<!-- A few books have greatly shaped my research during my formative years at SJMC. I'd love to share them with you in case you might be interested: John Zaller's [The Nature and Origins of Mass Opinion](https://www.cambridge.org/core/books/nature-and-origins-of-mass-opinion/70B1485D3A9CFF55ADCCDD42FC7E926A), Yochai Benkler's [The Wealth of Networks](http://www.benkler.org/Benkler_Wealth_Of_Networks.pdf), Paul Starr's [The Creation of the Media: Political Origins of Modern Communications](https://www.princeton.edu/~starr/CreationoftheMedia/Media.html), Fred Turner's [From Counterculture to Cyberculture: Stewart Brand, the Whole Earth Network, and the Rise of Digital Utopianism](https://www.press.uchicago.edu/ucp/books/book/chicago/F/bo3773600.html), Bruce Bimber, Andrew Flanagin and Cynthia Stohl's [Collective Action in Organizations](https://www.cambridge.org/us/academic/subjects/politics-international-relations/american-government-politics-and-policy/collective-action-organizations-interaction-and-engagement-era-technological-change), David Karpf's [The MoveOn Effect: The Unexpected Transformation of American Political Advocacy](https://www.oxfordscholarship.com/view/10.1093/acprof:oso/9780199898367.001.0001/acprof-9780199898367), Lance Bennett & Alexandra Segerberg's [The Logic of Connective Action](https://www.cambridge.org/core/books/logic-of-connective-action/6B54DBBEAD1625C2778F8D80A17D58E1), Zeynep Tufekci's [Twitter and Tear Gas: The Power and Fragility of Networked Protest](https://www.twitterandteargas.org/), Matthew Hindman's The [Myth of Digital Democracy](https://press.princeton.edu/titles/8781.html), Alice Marwick's [Status Update: Celebrity, Publicity, and Branding in the Social Media Age](https://yalebooks.yale.edu/book/9780300209389/status-update), Andrew Chadwick's [The Hybrid Media System: Politics and Power](https://www.andrewchadwick.com/hybrid-media-system), James Webster's [The Marketplace of Attention](https://mitpress.mit.edu/books/marketplace-attention), and Nick Couldry's [Media, Society, World: Social Theory and Digital Media Practice](https://www.wiley.com/en-us/Media,+Society,+World:+Social+Theory+and+Digital+Media+Practice-p-9780745639208). Recently, I was inspired by Yochai Benkler, Robert Faris, and Hal Roberts's [Network Propaganda: Manipulation, Disinformation, and Radicalization in American Politics](https://oxford.universitypressscholarship.com/view/10.1093/oso/9780190923624.001.0001/oso-9780190923624), Jaime Settle's [Frenemies: How Social Media Polarizes America](https://www.cambridge.org/sg/academic/subjects/politics-international-relations/american-government-politics-and-policy/frenemies-how-social-media-polarizes-america?format=HB&isbn=9781108472531), and Chris Bail's [Breaking the Social Media Prism: How to Make Our Platforms Less Polarizing](https://press.princeton.edu/books/hardcover/9780691203423/breaking-the-social-media-prism). If you happen to be fascinated by any one of these books, I'd be delighted to have a chat with you about it. -->
+I find immense joy in helping students develop their skills and knowledge. During my years at UB, I have had the privilege of teaching a variety of courses, including research methods, communication theory, introduction to mass communication, and social media and society at undergraduate and graduate levels. Receiving heartfelt notes from my students expressing their gratitude and appreciation for my teaching has been truly exhilarating. Their feedback serves as a constant inspiration for me to continually refine and improve my teaching.
 
-Apart from doing research, I like playing with my little one (and his friends), hiking, traveling, doing Zumba, cooking comfort food, and watching talk shows, movies, and TV series. I used to be a big fan of classical and rock music, but as time goes by I find myself gravitating toward podcasts, something I enjoy listening to during my daily commute. 
+Apart from doing research and teaching, I like playing with my little one (and his friends), traveling, cooking comfort food, and watching talk shows, movies, and TV series. I used to be a big fan of classical and rock music, but as time goes by I find myself gravitating toward podcasts, something I enjoy listening to during my daily commute. 
 
-**My dissertation won an award :) [A summary](files/A Network Approach Summary.pdf) is available.**
+My dissertation won an award from the Political Communication Division of the American Political Science Association (APSA) :) [A summary](files/A Network Approach Summary.pdf) is available.
 
-**I co-founded [the Communication and Emerging Media (CEM) lab](https://cemlab.github.io/) with my colleagues. We have been doing cool research in the basement of Baldy and on Zoom.**
+I co-founded [the Communication and Emerging Media (CEM) lab](https://cemlab.github.io/) with [Jiyoun Suk](https://comm.uconn.edu/person/jiyoun-suk/) and [Nojin Kwak](https://scholar.google.com/citations?user=Wp2p7ksAAAAJ&hl=en). We have been doing cool research in the basement of Baldy and on Zoom. Check out our recent publications and on-going work on our lab site.
 
-**My full CV is available [here](files/Zhang_CV_nov22.pdf).**
+My full CV is available [here](files/ZHANG_CV_Mar23.pdf).
 
