--- a/index.Rmd
+++ b/index.Rmd
@@ -18,15 +18,21 @@ I'm an assistant professor in the [Department of Communication](http://www.buffa
 
 # Research 
 
-I study the processes and outcomes of (mostly political) communication, with a particular emphasis on social media. Through my research program, I seek to answer three primary questions. First, how do individuals express themselves and interact with each other on social media? Second, how do social media platforms form an ecosystem and relate to one another in terms of information flow? And third, what are the broader implications of communication and interaction on social media for journalism and civic life? With these three lines of inquiry, I hope to explore how emerging communication technologies are shaping the nature and dynamics of public attention, opinion expression, and information sharing, and their larger societal implications.
+I study the processes and outcomes of (mostly political) communication, with a particular emphasis on social media. Through my research program, I seek to answer the following three questions.
 
-I have authored academic articles on a variety of topics, such as how social media actors assemble their followers, how social media amplify obscure actors and peripheral groups, and how social media public opinion can be imagined and measured. My research has explored political issues ranging from mass shootings and gun control, immigration, the #MeToo movement, Donald Trump's social media use, QAnon, to the Russian IRA disinformation campaign. 
++ How do individuals express themselves and interact with each other on social media? 
++ How do different social media platforms form an ecosystem and relate to one another in terms of information flow? 
++ What are the broader implications of communication and interaction on social media for journalism and civic life? 
 
-The methods I use in my research are primarily computational, though I am also familiar with survey and experimental methods. For my research, I usually collect social media data, conduct automated text analysis using unsupervised and supervised machine learning, perform community detection through various clustering techniques, and run time series modeling. In addition to Twitter, I have expanded my research to other platforms such as Facebook, YouTube, Reddit, Truth Social, and Parler. Besides using existing computational methods, I also develop innovative methods in collaboration with colleagues from statistics and computer science to facilitate communication research. My primary programming language is R, and I have a working knowledge of SPSS, Hadoop, Java, and Python.
+With these three lines of inquiry, I hope to explore how emerging communication technologies are shaping the nature and dynamics of public attention, opinion expression, and information sharing, and their larger societal implications.
+
+<!-- I have authored academic articles on a variety of topics, such as how social media actors assemble their followers, how social media amplify obscure actors and peripheral groups, and how social media public opinion can be imagined and measured. My research has explored political issues ranging from mass shootings and gun control, immigration, the #MeToo movement, Donald Trump's social media use, QAnon, to the Russian IRA disinformation campaign. -->
+
+The methods I use in my research are primarily computational. For my research, I usually collect social media data, conduct automated text analysis using unsupervised and supervised machine learning, perform community detection through various clustering techniques, and run time series modeling. In addition to Twitter, I have expanded my research to other platforms such as Facebook, YouTube, Reddit, Truth Social, and Parler etc. Besides using existing computational methods, I also develop innovative methods in collaboration with colleagues from statistics and computer science to facilitate communication research. 
 
 # Teaching
 
-I find immense joy in helping students develop their skills and knowledge. During my years at UB, I have had the privilege of teaching a variety of courses, including research methods, communication theory, introduction to mass communication, and social media and society at undergraduate and graduate levels. Receiving heartfelt notes from my students expressing their gratitude and appreciation for my teaching has been truly exhilarating. Their feedback serves as a constant inspiration for me to continually refine and improve my teaching.
+I find immense joy in helping students develop their skills and knowledge. During my years at UB, I have had the privilege of teaching a variety of courses, including research methods, communication theory, introduction to mass communication, and social media and society at undergraduate and graduate levels. Receiving heartfelt notes from my students expressing their gratitude and appreciation for my teaching has been truly exhilarating. Their feedback serves as a constant inspiration for me to continually update and refine my teaching.
 
 # Miscellaneous 
 
